updated layout. 80% of layout completed

--- a/app/views/layouts/splash.haml
+++ b/app/views/layouts/splash.haml
@@ -17,7 +17,7 @@
       %header#header.site-header
         .container
           %h1.navbar-brand
-            %a{href: "index.html"} SignInEasy
+            %a.fa.fa-comments-o{href: "index.html"} SignInEasy
           %ul#navigation.nav.nav-pills.pull-right
             %li.active
               %a.current{href: "#carousel-1"} Home
