form modal now updating and then removing itself, but the register button still needs to be reset

--- a/app/views/guests/_form_model.haml
+++ b/app/views/guests/_form_model.haml
@@ -1,6 +1,6 @@
 
-#manual-guest-registration-model{ :class => 'model' }
-  = form_for(Guest.new, :remote => 'true', :html => { "data-type" => :json}) do |f|
+.model#manual-guest-registration-model
+  = form_for(Guest.new, remote: true, :html => {:class => 'manual-guest-reg-modal'}) do |f|
     %ul.errors
 
     .form-group
