--- a/app/views/guests/_form_modal.haml
+++ b/app/views/guests/_form_modal.haml
@@ -1,5 +1,5 @@
 
-.model#manual-guest-registration-model
+.modal#manual-guest-registration-modal
   = form_for(Guest.new, remote: true, :html => {:class => 'manual-guest-reg-modal'}) do |f|
     %ul.errors
 
