adding current_user.organization.id to modal and fixing phone number display error on index-haml

--- a/app/views/guests/_form_modal.haml
+++ b/app/views/guests/_form_modal.haml
@@ -41,7 +41,7 @@
 
     .form-group
       = f.hidden_field :employee_id
-      = f.hidden_field :organization_id, value: @organization_id
+      = f.hidden_field :organization_id, value: current_user.organization.id
            
     .modal-footer  
       %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Cancel
